3-kompose-ingress/app-ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file /src/docker-compose-ingress.yaml --out 3-kompose-ingress --replicas 2
    kompose.service.expose: nodejs-example-app.zer0.hu
    kompose.service.expose.ingress-class-name: nginx
    kompose.version: 1.32.0 (HEAD)
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    io.kompose.service: app-ingress
  name: app-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: app-ingress
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file /src/docker-compose-ingress.yaml --out 3-kompose-ingress --replicas 2
        kompose.service.expose: nodejs-example-app.zer0.hu
        kompose.service.expose.ingress-class-name: nginx
        kompose.version: 1.32.0 (HEAD)
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
      labels:
        io.kompose.network/src-default: "true"
        io.kompose.service: app-ingress
    spec:
      containers:
        - args:
            - index.js
          command:
            - node
          image: zerosuxx/nodejs-example-app:0.1.0
          name: app-ingress
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
      restartPolicy: Always
