3-kompose-ingress/app-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-ingress.yaml --replicas 2 --out 3-kompose-ingress
    kompose.service.expose: nodejs-example-app.zer0.hu
    kompose.service.expose.ingress-class-name: nginx
    kompose.version: 1.32.0 (765fde254)
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    io.kompose.service: app-deployment
  name: app-deployment
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: app-deployment
