3-kompose-ingress/app-deployment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-ingress.yaml --replicas 2 --out 3-kompose-ingress
    kompose.service.expose: nodejs-example-app.zer0.hu
    kompose.service.expose.ingress-class-name: nginx
    kompose.version: 1.32.0 (765fde254)
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    io.kompose.service: app-deployment
  name: app-deployment
spec:
  ingressClassName: nginx
  rules:
    - host: nodejs-example-app.zer0.hu
      http:
        paths:
          - backend:
              service:
                name: app-deployment
                port:
                  number: 3000
            path: /
            pathType: Prefix
