3-kompose-ingress/app-ingress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert --file /src/docker-compose-ingress.yaml --out 3-kompose-ingress --replicas 2
    kompose.service.expose: nodejs-example-app.zer0.hu
    kompose.service.expose.ingress-class-name: nginx
    kompose.version: 1.32.0 (HEAD)
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    io.kompose.service: app-ingress
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: nodejs-example-app.zer0.hu
      http:
        paths:
          - backend:
              service:
                name: app-ingress
                port:
                  number: 3000
            path: /
            pathType: Prefix
